--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,28 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.background{
+.background {
     width: 100%;
     height: 100vh;
 }
 
-video{
+video {
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
-.content{
+.content {
     position: absolute;
     width: 100%;
-    height: 200%;
+    height: 100%;
+    top: 50%;
     left: 50%;
-    transform: translate(-70%, -25%);
-    top: 0;
+    transform: translate(-60%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
