--- a/src/components/mainNavigation/MainNavigation.module.css
+++ b/src/components/mainNavigation/MainNavigation.module.css
@@ -12,10 +12,10 @@
   position: fixed;
   top: 20px;
   left: 50%;
-  transform: translate(-50%)
+  transform: translate(-50%);
 }
 
-.logo{
+.logo {
   color: black;
   justify-self: start;
   align-items: center;
@@ -28,14 +28,13 @@
   justify-content: end;
 }
 
-.logoImg{
+.logoImg {
   margin: 0.2rem;
   width: 4rem;
   height: 3.8rem;
-  
 }
 
-.navMenu{
+.navMenu, .navMenuActive {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
@@ -43,25 +42,96 @@
   align-items: center;
   text-align: center;
   justify-content: end;
-
 }
 
-.navLink{
+
+
+.navLink {
   text-decoration: none;
   color: black;
   padding: 0.7rem 1rem;
   white-space: nowrap;
 }
 
-.navLinkIcon{
+.navLinkIcon {
   padding-right: 0.2rem;
   width: 1.5rem;
   height: 1.3rem;
 }
 
-.navLink:hover{
+.navLink:hover {
   background: rgb(80, 80, 238);
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
 
+.menuBar {
+  color: black;
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+
+.MenuSmallScreen {
+  display: none;
+}
+
+@media screen and (max-width: 1600px) {
+  .MenuSmallScreen {
+    z-index: 99;
+  }
+  .navMenu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgba(224, 214, 224, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
+    backdrop-filter: blur(4px);
+    border-radius: 13px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 100px;
+    left: -110%;
+    align-items: stretch;
+    padding: 80 px 0 30px 0;
+    margin: 0;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .navMenuActive {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgba(224, 214, 224, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
+    backdrop-filter: blur(4px);
+    border-radius: 13px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 100px;
+    left: 0%;
+    align-items: stretch;
+    padding: 80 px 0 30px 0;
+    margin: 0;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .navLink {
+    display: block;
+    width: 100%;
+    padding: 2rem 0;
+    color: #222;
+  }
+
+  .navLink:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(20px);
+  }
+  .MenuSmallScreen {
+    display: block;
+  }
+}
