--- a/src/components/mainNavigation/MainNavigation.module.css
+++ b/src/components/mainNavigation/MainNavigation.module.css
@@ -34,7 +34,8 @@
   height: 3.8rem;
 }
 
-.navMenu, .navMenuActive {
+.navMenu,
+.navMenuActive {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
@@ -43,8 +44,6 @@
   text-align: center;
   justify-content: end;
 }
-
-
 
 .navLink {
   text-decoration: none;
@@ -76,30 +75,12 @@
   display: none;
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 800px) {
   .MenuSmallScreen {
     z-index: 99;
   }
-  .navMenu {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    background-color: rgba(224, 214, 224, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 13px;
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 100px;
-    left: -110%;
-    align-items: stretch;
-    padding: 80 px 0 30px 0;
-    margin: 0;
-    z-index: -1;
-    transition: all 0.3s ease-in-out;
-  }
 
+  .navMenu,
   .navMenuActive {
     display: flex;
     flex-direction: column;
@@ -111,13 +92,20 @@
     width: 100%;
     height: auto;
     position: absolute;
-    top: 100px;
-    left: 0%;
+    top: 0px;
     align-items: stretch;
-    padding: 80 px 0 30px 0;
+    padding: 4rem 0px 30px 0;
     margin: 0;
     z-index: -1;
     transition: all 0.3s ease-in-out;
+  }
+
+  .navMenu {
+    left: -110%;
+  }
+
+  .navMenuActive {
+    left: 0%;
   }
 
   .navLink {
