--- a/src/components/languagebutton/LanguageButton.module.css
+++ b/src/components/languagebutton/LanguageButton.module.css
@@ -3,46 +3,20 @@
   justify-content: space-between;
   align-items: center;
   font-size: 1.2rem;
-  padding: 0 30px;
-  background-color: white;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
-  width: 95%;
-  height: 80px;
-  border-radius: 13px;
+  height: 50px;
   position: fixed;
   top: 10px;
-  left: 2.5%;
-  
-}
-
-.logo {
-  color: black;
-  justify-self: start;
-  align-items: center;
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-gap: 10px;
-  list-style: none;
-  align-items: center;
-  text-align: center;
-  justify-content: end;
-}
-
-.logoImg {
-  margin: 0.2rem;
-  width: 4rem;
-  height: 3.8rem;
+  left: 89%;
 }
 
 .navMenu,
 .navMenuActive {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
   list-style: none;
   align-items: center;
   text-align: center;
   justify-content: end;
+  display: flex; 
+  flex-direction: column; 
 }
 
 .navLink {
@@ -72,19 +46,12 @@
 }
 
 .MenuSmallScreen {
-  display: none;
+  display: block; /* Menü-Icon immer sichtbar */
 }
 
 @media screen and (max-width: 800px) {
-  .MenuSmallScreen {
-    z-index: 99;
-  }
-
   .navMenu,
   .navMenuActive {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     background-color: rgba(224, 214, 224, 0.25);
     box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
     backdrop-filter: blur(4px);
@@ -100,14 +67,6 @@
     transition: all 0.3s ease-in-out;
   }
 
-  .navMenu {
-    left: -110%;
-  }
-
-  .navMenuActive {
-    left: 0%;
-  }
-
   .navLink {
     display: block;
     width: 100%;
@@ -118,8 +77,5 @@
   .navLink:hover {
     background-color: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(20px);
-  }
-  .MenuSmallScreen {
-    display: block;
   }
 }
