--- a/src/components/languagebutton/LanguageButton.module.css
+++ b/src/components/languagebutton/LanguageButton.module.css
@@ -1,81 +1,12 @@
-.NavigationItems {
+.dropdown {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.2rem;
-  height: 50px;
-  position: fixed;
-  top: 10px;
-  left: 89%;
+  justify-content: flex-end;
 }
 
-.navMenu,
-.navMenuActive {
-  list-style: none;
-  align-items: center;
-  text-align: center;
-  justify-content: end;
-  display: flex; 
-  flex-direction: column; 
-}
-
-.navLink {
-  text-decoration: none;
-  color: black;
-  padding: 0.7rem 1rem;
-  white-space: nowrap;
-}
-
-.navLinkIcon {
+.globeIcon {
+  width: 1.8rem;
+  height: 1.4rem;
+  
   padding-right: 0.2rem;
-  width: 1.5rem;
-  height: 1.3rem;
-}
-
-.navLink:hover {
-  background: rgb(80, 80, 238);
-  border-radius: 4px;
-  transition: all 0.2s ease-in-out;
-}
-
-.menuBar {
-  color: black;
-  width: 1.5rem;
-  height: 1.5rem;
-  cursor: pointer;
-}
-
-.MenuSmallScreen {
-  display: block; /* Menü-Icon immer sichtbar */
-}
-
-@media screen and (max-width: 800px) {
-  .navMenu,
-  .navMenuActive {
-    background-color: rgba(224, 214, 224, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 13px;
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0px;
-    align-items: stretch;
-    padding: 4rem 0px 30px 0;
-    margin: 0;
-    z-index: -1;
-    transition: all 0.3s ease-in-out;
-  }
-
-  .navLink {
-    display: block;
-    width: 100%;
-    padding: 2rem 0;
-    color: #222;
-  }
-
-  .navLink:hover {
-    background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(20px);
-  }
+  padding-left: 0.2rem;
 }
