--- a/src/components/mainNavigation/MainNavigation.module.css
+++ b/src/components/mainNavigation/MainNavigation.module.css
@@ -54,8 +54,9 @@
 
 .navLinkIcon {
   padding-right: 0.2rem;
-  width: 1.5rem;
-  height: 1.3rem;
+  padding-left: 0.2rem;
+  width: 1.8rem;
+  height: 1.4rem;
 }
 
 .navLink:hover {
@@ -94,7 +95,7 @@
     position: absolute;
     top: 0px;
     align-items: stretch;
-    padding: 4rem 0px 30px 0;
+    padding: 4rem 0px 4rem 0;
     margin: 0;
     z-index: -1;
     transition: all 0.3s ease-in-out;
@@ -111,7 +112,7 @@
   .navLink {
     display: block;
     width: 100%;
-    padding: 2rem 0;
+    padding: 2rem;
     color: #222;
   }
 
