--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -3,6 +3,11 @@ table {
     border-collapse: collapse;
     width: 100%;
   }
+  .tableScroll{
+    max-height: 500px;
+    overflow-y: auto;
+    margin-top: 20px;
+  }
   
   table td,
   table th {
