--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-body {
+body,
+.header {
   background: rgb(125, 166, 63);
   background: linear-gradient(
     90deg,
@@ -13,8 +14,15 @@ body {
   flex-direction: column;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 8rem;
+}
+
 .content {
   padding-top: 8rem;
-  margin-top: 8rem;
+  margin-top: 2rem;
   color: black;
 }
