--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -3,10 +3,19 @@ table {
     border-collapse: collapse;
     width: 100%;
   }
+
+  table thead th {
+    position: sticky;
+    top: 0; /* Bleibt oben */
+    z-index: 100; /* Stellt sicher, dass er über anderen Inhalten ist */
+    background-color: #4caf50; 
+
+  }
   .tableScroll{
-    max-height: 500px;
+    max-height: 300px;
     overflow-y: auto;
     margin-top: 20px;
+    
   }
   
   table td,
