--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@ body,
   background: linear-gradient(
     90deg,
     rgba(125, 166, 63, 1) 0%,
-    rgba(200, 217, 176, 1) 35%,
-    rgba(175, 217, 85, 1) 100%
+    rgb(214, 225, 199) 35%,
+    rgb(255, 255, 255) 100%
   );
 }
 
@@ -26,5 +26,7 @@ body,
   padding-top: 8rem;
   margin-top: 2rem;
   color: black;
+  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.25);
+    border-radius: 13px;
 }
 
