--- a/src/App.css
+++ b/src/App.css
@@ -14,19 +14,16 @@ body,
   flex-direction: column;
 }
 
-
 .header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 8rem;
+  z-index: 1000;
 }
 
 .content {
-  padding-top: 8rem;
-  margin-top: 2rem;
-  color: black;
+  margin-top: 10rem;
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.25);
-    border-radius: 13px;
+  border-radius: 13px;
+  z-index: 500;
 }
-
