--- a/src/components/languagebutton/LanguageButton.module.css
+++ b/src/components/languagebutton/LanguageButton.module.css
@@ -13,6 +13,7 @@
   top: 10px; /* Abstand von oben */
   right: 10px; /* Abstand von rechts */
   justify-content: flex-end;
+  
 }
 
 .globeIcon {
@@ -22,4 +23,16 @@
   right: 10px; /* Abstand von rechts, plus Breite des Dropdowns */
   padding-right: 0.2rem;
   padding-left: 0.2rem;
+}
+
+.btn.btn-secondary {
+  background-color: #7DA63F; 
+  border-color: #7DA63F; 
+  color: #1D4014; 
+}
+
+.btn.btn-secondary:hover {
+  background-color: #1D4014; 
+  border-color: #1D4014;
+  color: #7DA63F; 
 }
