--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body,
   );
 }
 
-.app-container {
+.appContainer {
   display: flex;
   flex-direction: column;
 }
@@ -22,8 +22,36 @@ body,
 }
 
 .content {
-  margin-top: 10rem;
+  
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.25);
   border-radius: 13px;
   z-index: 500;
+}
+
+.btn.btn-secondary {
+  background-color: #7da63f;
+  border-color: #7da63f;
+  color: #1d4014;
+}
+
+.btn.btn-secondary:hover {
+  background-color: #1d4014;
+  border-color: #1d4014;
+  color: #7da63f;
+}
+
+@media (hover: none) and (pointer: coarse) {
+  .btn.btn-secondary:hover {
+    background-color: #7da63f;
+    border-color: #7da63f;
+    z-index: 1;
+    
+  
+  }
+
+  .navLink:active {
+    background-color: #1d4014;
+   border-color: #1d4014;
+    
+  }
 }
