--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,10 +1,20 @@
 .footer {
-  color: #333;
+  color: #305473;
   text-align: center;
   padding: 2px 0;
-  position: static;
+  position: fixed;
   bottom: 0;
   width: 100%;
+  height: 40px;
+  z-index: 1000;
+  background: rgb(125, 166, 63);
+  background: linear-gradient(
+    90deg,
+    rgba(125, 166, 63, 1) 0%,
+    rgb(214, 225, 199) 35%,
+    rgb(255, 255, 255) 100%
+  );
+
 }
 
 .footerContent {
@@ -13,10 +23,23 @@
 }
 
 .footer a {
-  color: #333;
+  color: #305473;
   text-decoration: none;
 }
 
 .footer a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+.footer{
+  font-size: 0.8rem;
+}
+
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .footer{
+    font-size: 0.8rem;
+  }
 }
