--- a/src/components/mainNavigation/MainNavigation.css
+++ b/src/components/mainNavigation/MainNavigation.css
@@ -33,6 +33,7 @@
 }
 
 .navLink {
+  
   text-decoration: none;
   color: #305473;
   padding: 1rem 1rem;
@@ -40,6 +41,7 @@
 }
 
 .navLinkIcon {
+  
   padding-right: 0.2rem;
   padding-left: 0.2rem;
   width: 1.4rem;
@@ -47,6 +49,7 @@
 }
 
 .navLink:hover {
+  padding-bottom: 1.8rem;
   background: #7da63f;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
@@ -63,7 +66,7 @@
   display: none;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
   .MenuSmallScreen {
     z-index: 99;
   }
@@ -111,3 +114,69 @@
     display: block;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .MenuSmallScreen {
+    z-index: 99;
+  }
+
+  .navMenu,
+  .navMenuActive {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgba(224, 214, 224, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(173, 168, 173, 0.25);
+    backdrop-filter: blur(4px);
+    border-radius: 13px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0px;
+    align-items: stretch;
+    padding: 4rem 0px 4rem 0;
+    margin: 0;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .navMenu {
+    left: -110%;
+  }
+
+  .navMenuActive {
+    left: 0%;
+  }
+
+  .navLink {
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    color: #222;
+  }
+
+  .navLink:hover {
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(20px);
+  }
+  .MenuSmallScreen {
+    display: block;
+  }
+}
+
+@media (hover: none) and (pointer: coarse) {
+  .navLink:hover {
+    padding-bottom: initial;
+    background: initial;
+    border-radius: initial;
+  }
+
+  .navLink:active {
+    padding-bottom: 1.8rem;
+    background: #7da63f;
+    border-radius: 4px;
+    transition: all 0.2s ease-in-out; 
+  }
+}
+
+
