--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -2,12 +2,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-grow: 1;
+  height: 80vh;
+  margin-top: 10rem;
 }
 
 .welcomeText,
 .videoOverlayContainer {
   flex: 1;
+}
+
+.welcomeText h1 {
+  font-size: 4rem;
+}
+.welcomeText h2 {
+  font-size: 3.4rem;
 }
 
 .welcomeText {
@@ -19,6 +27,8 @@
   text-align: center;
 }
 
+
+
 .videoOverlayContainer {
   position: relative;
 }
@@ -26,34 +36,166 @@
 .videoContainer {
   display: flex;
   justify-content: center;
-  padding-bottom: 9%;
 }
 
 video {
-  width: 800px;
-  height: 450px;
+  width: 1200px;
   max-width: 100%;
-  max-height: 50vh;
-  border-radius: 13px;
+  max-height: 70vh;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .overlayContent {
   position: absolute;
-  top: 40%;
-  left: 40%;
+  top: 50%;
+  left: 35%;
   transform: translate(-50%, -50%);
   text-align: center;
   color: #305473;
 }
 
-.btn.btn-secondary {
-    background-color: #7DA63F; 
-    border-color: #7DA63F; 
-    color: #1D4014; 
+@media (max-width: 400px) {
+  .contentContainer {
+    height: 65vh;
+    flex-direction: column;
   }
-  
- .btn.btn-secondary:hover {
-    background-color: #1D4014; 
-    border-color: #1D4014;
-    color: #7DA63F; 
+
+  .welcomeText h1 {
+    font-size: 2rem;
   }
+  .welcomeText h2 {
+    font-size: 1.6rem;
+  }
+
+  .overlayContent h3 {
+    font-size: 0.8em;
+    
+  }
+
+  .overlayContent {
+    top: 45%;
+    left: 40%;
+  }
+
+  video {
+    width: 100%;
+    height: auto;
+    max-height: 30vh;
+    padding-left: 0.1rem;
+    padding-right: 0.1rem;
+  }
+}
+
+@media (min-width: 401px) and (max-width: 600px) {
+  .contentContainer {
+    height: 75vh;
+    flex-direction: column;
+  }
+
+  .overlayContent h3 {
+    font-size: 1rem;
+    
+  }
+
+  .overlayContent {
+    top: 35%;
+    left: 40%;
+  }
+
+  video {
+    width: 100%;
+    height: auto;
+    max-height: 30vh;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 800px) {
+  .contentContainer {
+    height: 50vh;
+    
+  }
+
+  .welcomeText h1 {
+    font-size: 1.5rem;
+  }
+  .welcomeText h2 {
+    font-size: 1.2rem;
+  }
+
+  .overlayContent h3 {
+    font-size: 0.9rem;
+  }
+
+  video {
+    max-height: 40vh;
+    padding-left: 0;
+    padding-right: 0.1rem;
+  }
+
+  .overlayContent {
+    top: 55%;
+    left: 35%;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1024px) and (max-height: 999px) {
+  .contentContainer {
+    height: 70vh;
+    margin-top: 5rem;
+  }
+
+  .welcomeText h1 {
+    font-size: 1.5rem;
+  }
+  .welcomeText h2 {
+    font-size: 1.2rem;
+  }
+
+  .overlayContent h3 {
+    font-size: 0.8rem;
+  }
+
+  video {
+    max-height: 40vh;
+    padding-left: 0;
+    padding-right: 0.1rem;
+  }
+
+  .overlayContent {
+    top: 50%;
+    left: 35%;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1025px) and (min-height: 1000px) and (max-height: 1500px) {
+  .contentContainer {
+    height: 90vh;
+    margin-top: 5rem;
+    flex-direction: column;
+  }
+
+  .welcomeText h1 {
+    font-size: 3rem;
+  }
+  .welcomeText h2 {
+    font-size: 2.8rem;
+  }
+
+  .overlayContent h3 {
+    font-size: 2.0rem;
+  }
+
+  video {
+    max-height: 40vh;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .overlayContent {
+    top: 35%;
+    left: 33%;
+  }
+}
