--- a/src/pages/Overus.css
+++ b/src/pages/Overus.css
@@ -1,16 +1,11 @@
 .legalContent {
   color: #305473;
   z-index: 10;
+  margin-top: 10rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 5rem;
+    
 }
 
-.btn.btn-secondary {
-  background-color: #7da63f;
-  border-color: #7da63f;
-  color: #1d4014;
-}
 
-.btn.btn-secondary:hover {
-  background-color: #1d4014;
-  border-color: #1d4014;
-  color: #7da63f;
-}
