--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -1,3 +1,8 @@
+.tableContainer{
+  padding-top: 10rem;
+}
+
+
 table {
     font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -12,7 +17,7 @@ table {
 
   }
   .tableScroll{
-    max-height: 300px;
+    max-height: 65vh;
     overflow-y: auto;
     margin-top: 20px;
     
