--- a/src/components/mainNavigation/MainNavigation.css
+++ b/src/components/mainNavigation/MainNavigation.css
@@ -1,18 +1,18 @@
 .NavigationItems {
   display: flex;
   justify-content: space-between;
-
   align-items: center;
   font-size: 1.2rem;
-
-  padding: 0 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 2.9rem;
   background-color: white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
   width: 95%;
   height: 4rem;
   border-radius: 13px;
   position: fixed;
-  top: 3rem;
+
   left: 2.5%;
   z-index: 500;
 }
@@ -33,7 +33,6 @@
 }
 
 .navLink {
-  
   text-decoration: none;
   color: #305473;
   padding: 1rem 1rem;
@@ -41,7 +40,6 @@
 }
 
 .navLinkIcon {
-  
   padding-right: 0.2rem;
   padding-left: 0.2rem;
   width: 1.4rem;
@@ -175,8 +173,6 @@
     padding-bottom: 1.8rem;
     background: #7da63f;
     border-radius: 4px;
-    transition: all 0.2s ease-in-out; 
+    transition: all 0.2s ease-in-out;
   }
 }
-
-
