--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -1,4 +1,20 @@
-.tableContainer{
+.filterContainer {
+  position: fixed;
+  
+  left: 0.1rem;
+  width: 100%; 
+  z-index: 1000; 
+  background-color: #4caf50;  
+  padding-top: 1px;
+  padding-bottom: 1px; 
+  padding-left: 1rem;
+  border-radius: 13px;
+  display: flex;
+  
+  
+}
+
+.tableContainer {
   padding-top: 10rem;
 }
 
