--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+* {
+  
+ 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
+}
+
 body,
 .header {
   background: rgb(125, 166, 63);
