--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -1,62 +1,103 @@
-.filterContainer {
-  position: fixed;
-  
-  left: 0.1rem;
-  width: 100%; 
-  z-index: 1000; 
-  background-color: #4caf50;  
-  padding-top: 1px;
-  padding-bottom: 1px; 
-  padding-left: 1rem;
-  border-radius: 13px;
-  display: flex;
-  
-  
-}
-
 .tableContainer {
   padding-top: 10rem;
 }
 
+.filterContainer {
+  position: fixed;
+
+  left: 0.1rem;
+  width: 100%;
+  z-index: 1000;
+  background-color: #4caf50;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 1rem;
+  border-radius: 13px;
+  display: flex;
+}
 
 table {
-    font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.thead  {
+  position: sticky;
+  
+  top: 0rem; 
+  background-color: #4caf50;
+}
+.tableScroll {
+  max-height: 70vh;
+  overflow-y: auto;
+  margin-top: 20px;
+}
+
+.flex.items-center.gap-2 {
+  display: flex;
+
+  flex-direction: row;
+  margin-top: 1rem;}
+
+table td,
+table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+table tr:hover {
+  background-color: #ddd;
+}
+
+table th,
+tfoot td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4caf50;
+  color: white;
+}
+
+.btn.btn-primary.dropdown-toggle{
+  margin-left: 0.5rem;
+}
+
+
+.dropdown-menu{
+  margin-left: 50rem;
   }
 
-  table thead th {
-    position: sticky;
-    top: 0; /* Bleibt oben */
-    z-index: 100; /* Stellt sicher, dass er über anderen Inhalten ist */
-    background-color: #4caf50; 
-
+@media screen and (max-width: 700px) {
+  .filterContainer {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+   
   }
-  .tableScroll{
+
+  .tableContainer {
+    padding-top: 8rem; /* Reduzierung des oberen Abstands */
+  }
+
+  .tableScroll {
+    margin-top: 2rem;
     max-height: 65vh;
-    overflow-y: auto;
-    margin-top: 20px;
-    
   }
+
+  body,
+  html {
+    overflow-y: hidden;
+  }
+
+  .thead  {
+    margin-top: 5rem;
+  }
+
   
-  table td,
-  table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  table tr:hover {
-    background-color: #ddd;
-  }
-  
-  table th, tfoot td {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #4caf50;
-    color: white;
-  }
+
+
+}
