--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -4,16 +4,20 @@
 
 .filterContainer {
   position: fixed;
-
-  left: 0.1rem;
   width: 100%;
   z-index: 1000;
   background-color: #4caf50;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding-left: 1rem;
+  padding: 0.5rem;
   border-radius: 13px;
   display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.filterDropdownContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 table {
@@ -22,23 +26,24 @@ table {
   width: 100%;
 }
 
-.thead  {
+.thead {
   position: sticky;
-  
-  top: 0rem; 
+  top: 0rem;
   background-color: #4caf50;
 }
+
 .tableScroll {
   max-height: 70vh;
   overflow-y: auto;
-  margin-top: 20px;
+  margin-top: 6rem;
 }
 
 .flex.items-center.gap-2 {
   display: flex;
 
   flex-direction: row;
-  margin-top: 1rem;}
+  margin-top: 1rem;
+}
 
 table td,
 table th {
@@ -63,29 +68,96 @@ tfoot td {
   color: white;
 }
 
-.btn.btn-primary.dropdown-toggle{
-  margin-left: 0.5rem;
+.btn.btn-primary {
+  background-color: #305473;
+  border-color: #305473;
+  color: white;
 }
 
+.btn.btn-primary:hover {
+  background-color: #042c4f;
+  border-color: #042c4f;
+  color: white;
+}
 
-.dropdown-menu{
-  margin-left: 50rem;
-  }
+.btn.btn-primary:focus {
+  background-color: #042c4f;
+  border-color: #042c4f;
+  color: white;
+}
 
-@media screen and (max-width: 700px) {
-  .filterContainer {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-   
-  }
+.dropdown-menu {
+  max-height: 55rem;
+  overflow-y: auto;
+}
 
+@media (max-width: 400px) {
   .tableContainer {
-    padding-top: 8rem; /* Reduzierung des oberen Abstands */
+    padding-top: 7.5rem;
+    font-size: 0.6rem;
+  }
+
+  .filterContainer {
+    flex-direction: column; /* Ändern in Spaltenlayout für kleine Bildschirme */
+    padding: 0.25rem; /* Reduzierung des Paddings */
+    gap: 0.3rem; /* Reduzierung des Abstands zwischen Elementen */
+    
+  }
+
+  .filterDropdownContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 0.3rem;
+  }
+
+  .btn.btn-primary {
+    font-size: 0.6rem;
+  }
+
+  .dropdown-menu {
+    max-height: 28rem;
+    overflow-y: auto;
+  }
+
+  .dropdown-item{
+    font-size: 0.6rem;
   }
 
   .tableScroll {
-    margin-top: 2rem;
-    max-height: 65vh;
+    margin-top: 5rem;
+    max-height: 55vh;
+  }
+
+  body,
+  html {
+    overflow-y: hidden;
+  }
+  table th {
+padding: 0rem;
+  }
+  
+}
+
+@media (min-width: 401px) and (max-width: 700px) {
+  .tableContainer {
+    padding-top: 7.5rem;
+  }
+
+  .filterContainer {
+    flex-direction: column; /* Ändern in Spaltenlayout für kleine Bildschirme */
+    padding: 0.25rem; /* Reduzierung des Paddings */
+    gap: 0.5rem; /* Reduzierung des Abstands zwischen Elementen */
+  }
+
+  .filterDropdownContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+  }
+
+  .tableScroll {
+    margin-top: 7.5rem;
+    max-height: 56vh;
   }
 
   body,
@@ -93,11 +165,15 @@ tfoot td {
     overflow-y: hidden;
   }
 
-  .thead  {
+  .thead {
     margin-top: 5rem;
   }
+}
 
-  
-
+@media (min-width: 701px) and (max-width: 1500px){
+  .tableScroll {
+    margin-top: 3rem;
+    max-height: 65vh;
+  }
 
 }
