--- a/src/pages/Overus.css
+++ b/src/pages/Overus.css
@@ -5,7 +5,48 @@
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 5rem;
+ max-height: 75vh;
+  
+  overflow-y: auto;
     
 }
+
+@media (max-width: 400px) {
+  
+  .legalContent {
+    margin-top: 8rem;
+    max-height: 70vh; }
+
+  .legalContent h1{
+    font-size: 1rem;
+  }
+
+  .legalContent p{
+    font-size: 0.8rem;
+  }
+
+}
+
+@media (min-width: 401px) and (max-width: 900px) {
+  
+  .legalContent {
+    margin-top: 8rem;
+    max-height: 13rem; }
+
+    .legalContent h1{
+      font-size: 1rem;
+    }
+
+    .legalContent p{
+      font-size: 0.8rem;
+    }
+
+
+}
+
+
+
+
+
 
 
