--- a/src/components/mainNavigation/MainNavigation.css
+++ b/src/components/mainNavigation/MainNavigation.css
@@ -12,14 +12,12 @@
   height: 4rem;
   border-radius: 13px;
   position: fixed;
-
   left: 2.5%;
   z-index: 500;
 }
 
 .logoText {
   color: #305473;
-  
 }
 
 .navMenu,
@@ -65,6 +63,28 @@
   display: none;
 }
 
+@media screen and (max-width: 900px) and (max-height: 500px) {
+  .NavigationItems {
+    
+    font-size: 1rem;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 2.2rem;
+    background-color: white;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+    width: 95%;
+    height: 2rem;
+    border-radius: 13px;
+    position: fixed;
+    left: 2.5%;
+    z-index: 500;
+  }
+
+  .logoText {
+    font-size: 1rem;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .MenuSmallScreen {
     z-index: 99;
@@ -103,7 +123,6 @@
     width: 100%;
     padding: 1rem;
     color: #222;
-    
   }
 
   .navLink:hover {
@@ -114,4 +133,3 @@
     display: block;
   }
 }
-
