--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -138,13 +138,14 @@ padding: 0rem;
   
 }
 
-@media (min-width: 401px) and (max-width: 700px) {
+@media (min-width: 401px) and (max-width: 900px) {
   .tableContainer {
-    padding-top: 7.5rem;
+    padding-top: 4.5rem;
+    font-size: 0.5rem;
   }
 
   .filterContainer {
-    flex-direction: column; /* Ändern in Spaltenlayout für kleine Bildschirme */
+    flex-direction: row; /* Ändern in Spaltenlayout für kleine Bildschirme */
     padding: 0.25rem; /* Reduzierung des Paddings */
     gap: 0.5rem; /* Reduzierung des Abstands zwischen Elementen */
   }
@@ -155,9 +156,13 @@ padding: 0rem;
     gap: 0.5rem;
   }
 
+  .btn.btn-primary {
+    font-size: 0.6rem;
+  }
+
   .tableScroll {
-    margin-top: 7.5rem;
-    max-height: 56vh;
+    margin-top: 1.3rem;
+    max-height: 50vh;
   }
 
   body,
@@ -170,7 +175,7 @@ padding: 0rem;
   }
 }
 
-@media (min-width: 701px) and (max-width: 1500px){
+@media (min-width: 901px) and (max-width: 1500px){
   .tableScroll {
     margin-top: 3rem;
     max-height: 65vh;
