--- a/src/components/tanStackTable/DataTable.css
+++ b/src/components/tanStackTable/DataTable.css
@@ -1,5 +1,5 @@
 .tableContainer {
-  padding-top: 10rem;
+  padding-top: 8rem;
 }
 
 .filterContainer {
@@ -33,9 +33,9 @@ table {
 }
 
 .tableScroll {
-  max-height: 70vh;
+  max-height: 60vh;
   overflow-y: auto;
-  margin-top: 6rem;
+  margin-top: 3rem;
 }
 
 .flex.items-center.gap-2 {
@@ -87,7 +87,7 @@ tfoot td {
 }
 
 .dropdown-menu {
-  max-height: 55rem;
+  max-height: 30rem;
   overflow-y: auto;
 }
 
@@ -125,7 +125,7 @@ tfoot td {
 
   .tableScroll {
     margin-top: 5rem;
-    max-height: 55vh;
+    max-height: 52vh;
   }
 
   body,
@@ -176,9 +176,14 @@ padding: 0rem;
 }
 
 @media (min-width: 901px) and (max-width: 1500px){
+  .tableContainer {
+    padding-top: 8rem;
+  }
+  
+  
   .tableScroll {
-    margin-top: 3rem;
-    max-height: 65vh;
+    margin-top: 2.5rem;
+    max-height: 60vh;
   }
 
 }
