--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body,
@@ -8,7 +7,18 @@ body,
   background: rgb(125, 166, 63);
   background: linear-gradient(
     90deg,
-    rgba(125, 166, 63, 1) 0%,
+    rgba(200, 217, 176, 1) 0%,
+    rgb(255, 255, 255) 35%,
+    rgb(255, 255, 255) 100%
+  );
+}
+
+/* Change gradient direct based on text direction */
+[dir="rtl"] body,
+[dir="rtl"] .header {
+  background: linear-gradient(
+    270deg,
+    rgba(200, 217, 176, 1) 0%,
     rgb(255, 255, 255) 35%,
     rgb(255, 255, 255) 100%
   );
